<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_android_support_license">Apache License 2.0, The Android Open Source Project</string>
    <string name="about_android_support_v4">v4 Support Library</string>
    <string name="about_android_support_v7_appcompat">v7 appcompat Support Library</string>
    <string name="about_android_support_v7_preference">v7 preference Support Library</string>
    <string name="about_default_license">All rights reserved.</string>
    <string name="about_name_version_str">%1$s %2$s</string>
    <string name="about_root_libraries">Included libraries</string>
    <string name="about_root_summary">Summary</string>
    <string name="about_root_title">microG UI Demo</string>
    <string name="about_root_version">Version v0.1.0</string>
    <string name="about_version_str">Version %1$s</string>
    <string name="account_manager_title">Google Account Manager</string>
    <string name="add_backend">Add backend</string>
    <string name="allow">Allow</string>
    <string name="ask_permission_tos">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies.</string>
    <string name="ask_scope_permission_title">%1$s would like to:</string>
    <string name="ask_service_permission_title">%1$s would like to use:</string>
    <string name="auth_before_connect">"An app on your device is trying to sign in to a Google account.

If this was intentional, use the "<b>Sign in</b> button to connect to Google’s sign-in page, if not, press <b>Cancel</b> to go back to the application that caused this dialog to show up.</string>
    <string name="auth_connecting">"Your device is establishing an connection to Google’s servers to sign you in.

This can take a few seconds."</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes."</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later."</string>
    <string name="auth_notification_content">%1$s requires your authorization to access your Google account.</string>
    <string name="auth_notification_title">Authentication required</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="cond_gcm_bat_action">Ignore optimizations</string>
    <string name="cond_gcm_bat_summary">You enabled Google Cloud Messaging but have battery optimizations active for microG Services Core. For push notifications to arrive you should ignore battery optimizations.</string>
    <string name="cond_gcm_bat_title">Battery optimizations enabled</string>
    <string name="cond_perm_title">Permission missing</string>
    <string name="configure_backends">Configure backends</string>
    <string name="configure_geocoder_backends">Configure address lookup backends</string>
    <string name="configure_geocoder_backends_summary">Enable, disable and configure backends for address lookup.</string>
    <string name="configure_location_backends">Configure location backends</string>
    <string name="configure_location_backends_summary">Enable, disable and configure backends for network based geolocation.</string>
    <string name="deny">Deny</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fake_signature">308204433082032ba003020102020900c2e08746644a308d300d06092a864886f70d01010405003074310b3009060355040613025553311330110603550408130a43616c69666f726e6961311630140603550407130d4d6f756e7461696e205669657731143012060355040a130b476f6f676c6520496e632e3110300e060355040b1307416e64726f69643110300e06035504031307416e64726f6964301e170d3038303832313233313333345a170d3336303130373233313333345a3074310b3009060355040613025553311330110603550408130a43616c69666f726e6961311630140603550407130d4d6f756e7461696e205669657731143012060355040a130b476f6f676c6520496e632e3110300e060355040b1307416e64726f69643110300e06035504031307416e64726f696430820120300d06092a864886f70d01010105000382010d00308201080282010100ab562e00d83ba208ae0a966f124e29da11f2ab56d08f58e2cca91303e9b754d372f640a71b1dcb130967624e4656a7776a92193db2e5bfb724a91e77188b0e6a47a43b33d9609b77183145ccdf7b2e586674c9e1565b1f4c6a5955bff251a63dabf9c55c27222252e875e4f8154a645f897168c0b1bfc612eabf785769bb34aa7984dc7e2ea2764cae8307d8c17154d7ee5f64a51a44a602c249054157dc02cd5f5c0e55fbef8519fbe327f0b1511692c5a06f19d18385f5c4dbc2d6b93f68cc2979c70e18ab93866b3bd5db8999552a0e3b4c99df58fb918bedc182ba35e003c1b4b10dd244a8ee24fffd333872ab5221985edab0fc0d0b145b6aa192858e79020103a381d93081d6301d0603551d0e04160414c77d8cc2211756259a7fd382df6be398e4d786a53081a60603551d2304819e30819b8014c77d8cc2211756259a7fd382df6be398e4d786a5a178a4763074310b3009060355040613025553311330110603550408130a43616c69666f726e6961311630140603550407130d4d6f756e7461696e205669657731143012060355040a130b476f6f676c6520496e632e3110300e060355040b1307416e64726f69643110300e06035504031307416e64726f6964820900c2e08746644a308d300c0603551d13040530030101ff300d06092a864886f70d010104050003820101006dd252ceef85302c360aaace939bcff2cca904bb5d7a1661f8ae46b2994204d0ff4a68c7ed1a531ec4595a623ce60763b167297a7ae35712c407f208f0cb109429124d7b106219c084ca3eb3f9ad5fb871ef92269a8be28bf16d44c8d9a08e6cb2f005bb3fe2cb96447e868e731076ad45b33f6009ea19c161e62641aa99271dfd5228c5c587875ddb7f452758d661f6cc0cccb7352e424cc4365c523532f7325137593c4ae341f4db41edda0d0b1071a7c440f0fe9ea01cb627ca674369d084bd2fd911ff06cdbf2cfa10dc0f893ae35762919048c7efc64c7144178342f70581c9de573af55b390dd7fdb9418631895d5f759f30112687ff621410c069308a</string>
    <string name="games_info_content">To use Play Games it is required to install the Google Play Games app. The application might continue without Play Games, but it is possible that it will behave unexpectedly.</string>
    <string name="games_info_title">%1$s would like to use Play Games</string>
    <string name="games_title">Google Play Games</string>
    <string name="gcm_app_error_unregistering">Error unregistering</string>
    <string name="gcm_app_not_installed_anymore">No longer installed</string>
    <string name="gcm_last_message_at">Last message: %1$s</string>
    <string name="gcm_messages_counter">Messages: %1$d (%2$d bytes)</string>
    <string name="gcm_no_message_yet">No messages received so far</string>
    <string name="gcm_not_registered">Not registered</string>
    <string name="gcm_registered">Registered</string>
    <string name="gcm_registered_since">Registered since: %1$s</string>
    <string name="gcm_state_connected">Current State: Connected since %1$s</string>
    <string name="gcm_state_disconnected">Current State: Disconnected</string>
    <string name="network_type_mobile">Mobile network</string>
    <string name="network_type_other">Other networks</string>
    <string name="network_type_roaming">Roaming</string>
    <string name="network_type_wifi">Wi-Fi</string>
    <string name="nlp_settings_label">UnifiedNlp Settings</string>
    <string name="pref_about_summary">Version information and used libraries</string>
    <string name="pref_about_title">About microG Services Core</string>
    <string name="pref_checkin_enable_summary">Registers your device to Google services and creates a unique device identifier. microG strips identifying bits other than your Google account name from registration data.</string>
    <string name="pref_gcm_confirm_new_apps_summary">Ask before registering a new app to receive push notifications</string>
    <string name="pref_gcm_confirm_new_apps_title">Confirm new apps</string>
    <string name="pref_gcm_enable_mcs_summary">Google Cloud Messaging is a push notification provider used by many third-party applications. To use it you must enable device registration.</string>
    <string name="pref_gcm_heartbeat_summary">"The interval in seconds for the system to heartbeat the Google servers. Increasing this number will reduce battery consumption, but might cause delays on push messages.
Deprecated, will be replaced in future release."</string>
    <string name="pref_gcm_heartbeat_title">Cloud Messaging heartbeat interval</string>
    <string name="pref_more_settings">More</string>
    <string name="pref_snet_custom_url_summary">Full URL of the third-party server answering SafetyNet attestation requests</string>
    <string name="pref_snet_custom_url_title">Custom server URL</string>
    <string name="pref_snet_self_signed_summary">Instead of requesting a server, sign SafetyNet responses locally using a self-signed certificate. Most apps will refuse to use self-signed responses.</string>
    <string name="pref_snet_self_signed_title">Use self-signed certificate</string>
    <string name="pref_snet_status_official_summary">Requires an unrooted system and microG DroidGuard Helper installed</string>
    <string name="pref_snet_status_official_title">Use official server</string>
    <string name="pref_snet_status_third_party_summary">Third-party servers might be able to reply to SafetyNet requests without DroidGuard signature</string>
    <string name="pref_snet_status_third_party_title">Use third-party server</string>
    <string name="prefcat_about">About</string>
    <string name="prefcat_configuration">Configuration</string>
    <string name="prefcat_google_services">Google Services</string>
    <string name="prefcat_location_service">Location service</string>
    <string name="prefcat_operation_mode">Operation mode</string>
    <string name="prefcat_services">Services</string>
    <string name="prefcat_setup">Setup</string>
    <string name="self_check_desc">Check if the system is correctly set up to use microG.</string>
    <string name="self_check_title">Self-Check</string>
    <string name="service_name_checkin">Google device registration</string>
    <string name="service_name_mcs">Google Cloud Messaging</string>
    <string name="service_name_snet">Google SafetyNet</string>
</resources>