<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefcat_setup">
        <Preference android:title="@string/self_check_title" android:key="@string/self_check_title" android:summary="@string/self_check_desc" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefcat_services">
        <CheckBoxPreference android:title="@string/pref_checkin_enable_title" android:key="@string/pref_checkin_enable" android:summary="@string/pref_checkin_enable_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_gcm_enable_mcs_title" android:key="@string/pref_gcm_enable_mcs" android:summary="@string/pref_gcm_enable_mcs_summary" android:dependency="@string/pref_checkin_enable" android:defaultValue="false" />
        <EditTextPreference android:title="@string/pref_gcm_heartbeat_title" android:key="@string/pref_gcm_heartbeat" android:summary="@string/pref_gcm_heartbeat_summary" android:dependency="@string/pref_gcm_enable_mcs" android:defaultValue="60" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefcat_location_service">
        <Preference android:title="@string/nlp_settings_label">
            <intent android:targetPackage="com.google.android.gms" android:targetClass="org.microg.nlp.ui.SettingsActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefcat_about">
        <Preference android:title="@string/pref_about_title" android:key="@string/pref_about_title" android:summary="@string/pref_about_summary" />
    </PreferenceCategory>
</PreferenceScreen>