<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefcat_operation_mode">
        <org.microg.tools.ui.RadioButtonPreference android:checked="true" android:title="@string/pref_snet_status_official_title" android:key="snet_official" android:summary="@string/pref_snet_status_official_summary" />
        <org.microg.tools.ui.RadioButtonPreference android:enabled="false" android:checked="false" android:title="@string/pref_snet_self_signed_title" android:key="snet_self_signed" android:summary="@string/pref_snet_self_signed_summary" />
        <org.microg.tools.ui.RadioButtonPreference android:checked="false" android:title="@string/pref_snet_status_third_party_title" android:key="snet_third_party" android:summary="@string/pref_snet_status_third_party_summary" />
        <EditTextPreference android:hint="https://example.com/server?key=123" android:title="@string/pref_snet_custom_url_title" android:key="snet_custom_url" android:summary="@string/pref_snet_custom_url_summary" android:dependency="snet_third_party" />
    </PreferenceCategory>
</PreferenceScreen>