<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:title="@string/pref_gcm_confirm_new_apps_title" android:key="gcm_confirm_new_apps" android:summary="@string/pref_gcm_confirm_new_apps_summary" android:defaultValue="false" />
    <PreferenceCategory android:title="Networks to use for Cloud Messaging" android:key="prefcat_networks">
        <ListPreference android:entries="@array/gcm_network_config_names" android:title="@string/network_type_mobile" android:key="gcm_network_mobile" android:summary="ON / Automatic: 13 min" android:defaultValue="0" android:entryValues="@array/gcm_network_config_values" />
        <ListPreference android:entries="@array/gcm_network_config_names" android:title="@string/network_type_wifi" android:key="gcm_network_wifi" android:summary="ON / Manual: 30 min" android:defaultValue="0" android:entryValues="@array/gcm_network_config_values" />
        <ListPreference android:entries="@array/gcm_network_config_names" android:title="@string/network_type_roaming" android:key="gcm_network_roaming" android:summary="OFF" android:defaultValue="0" android:entryValues="@array/gcm_network_config_values" />
        <ListPreference android:entries="@array/gcm_network_config_names" android:title="@string/network_type_other" android:key="gcm_network_other" android:summary="ON / Automatic: 30 min" android:defaultValue="0" android:entryValues="@array/gcm_network_config_values" />
    </PreferenceCategory>
</PreferenceScreen>