<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="?colorPrimary" android:gravity="center_horizontal" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_manager_title" />
    <View android:id="@id/no_progress_bar" android:background="@color/dialog_border_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
    <ProgressBar android:id="@id/progress_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="3.0dip" android:indeterminate="true" style="?android:progressBarStyleHorizontal" />
    <LinearLayout android:layout_gravity="center_horizontal" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <FrameLayout android:background="@drawable/circle_shape_background" android:padding="10.0dip" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginRight="-3.0dip">
            <de.hdodenhof.circleimageview.CircleImageView android:id="@id/account_photo" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/ic_generic_man" />
        </FrameLayout>
        <FrameLayout android:background="@drawable/circle_shape_background" android:padding="10.0dip" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginLeft="-3.0dip">
            <ImageView android:id="@id/app_icon" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@mipmap/ic_core_service_app" />
        </FrameLayout>
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:textColor="?colorAccent" android:gravity="center_horizontal" android:id="@id/title" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ask_scope_permission_title" />
    <ListView android:id="@id/permissions" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="?colorPrimary" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ask_permission_tos" />
    <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@android:id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/deny" style="?buttonBarButtonStyle" />
        <Button android:id="@android:id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allow" style="?buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>